--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 :root {
     --button-height: 2rem;
@@ -8,7 +9,7 @@
 body {
     margin: 0;
     color: white;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #instructions {
@@ -26,12 +27,22 @@ body {
 #results {
     position: absolute;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     height: 100%;
     width: 100%;
     background-color: rgba(20, 20, 20, 0.75);
+    font-size: 1.2rem;
+}
+
+#result {
+    margin-left: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
 }
 
 .player {
@@ -105,4 +116,6 @@ a:visited {
 
 #credits {
     margin-left: 120px;
+
+    font-size: 1.1rem;
 }
