--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,8 @@ body {
     position: absolute;
     color: white;
     font-size: 1em;
-    max-width: 350px;
-    top: 75%;
-    right: 71%;
+    bottom: 10px;
+    left: 20px;
 }
 
 a:visited {
