Add and implement graphics settings

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,14 @@ body {
     left: 20px;
 }
 
+#settings {
+    position: absolute;
+    color: white;
+    font-size: .8rem;
+    bottom: 20px;
+    right: 20px;
+}
+
 a:visited {
     color: inherit;
 }
