--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,49 @@ a:visited {
 
     font-size: 1.1rem;
 }
+
+@media only screen and (max-width: 680px) {
+    html, body {
+        height: 100%;
+        margin: 0;
+        overflow: hidden;
+    }
+
+    canvas {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    #instructions {
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    
+    #text {
+        font-size: .75rem;
+    }
+
+    #results {
+        padding-top: 10vh;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    #result {
+        margin: 0;
+        font-size: .75rem;
+    }
+
+    .player {
+        margin-top: 5vh;
+    }
+
+    #credits {
+        margin: 5vh 0;
+        font-size: .75rem;
+    }
+
+    #score {
+        font-size: 2rem;
+    }
+}
